infra/k8s/preview/gateway-service.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - $API_HOST
      secretName: api-tls
  rules:
    - host: $API_HOST
      http:
        paths:
          - backend:
              serviceName: gateway
              servicePort: 80
